plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'minic'
version = '0.4.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dependencies {
    implementation 'org.fxmisc.richtext:richtextfx:0.11.7'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testImplementation 'org.assertj:assertj-core:3.25.3'
}

javafx {
    version = '21.0.2'
    modules = ['javafx.controls']
}

test {
    useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

application {
    mainClass = 'minic.Main'
}

tasks.register('runUi', JavaExec) {
    group = 'application'
    description = '启动 MiniC Visual Workbench JavaFX UI'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'minic.ui.MiniCWorkbenchLauncher'
    jvmArgs = [
            '--module-path', configurations.runtimeClasspath.asPath,
            '--add-modules', javafx.modules.join(','),
            '-Dfile.encoding=UTF-8',
            '-Dsun.stdout.encoding=UTF-8',
            '-Dsun.stderr.encoding=UTF-8',
            '-Duser.language=en',
            '-Duser.country=US'
    ]
}
